# cargo-project

./: Cargo.toml  README.md
.github/workflows/: build.yml
cargo-project/: Cargo.toml
cargo-project-data/: Cargo.toml
cargo-project-data/src/: lib.rs
cargo-project-data/src/features/add/: datasource.rs  models.rs
cargo-project-data/src/features/new/: datasource.rs
cargo-project-domain/: Cargo.toml
cargo-project-domain/src/core/templates/: cargo.rs  entities.rs  lib.rs  main.rs  mod.rs  mod_file.rs  repository.rs
cargo-project-domain/src/features/add/: repository.rs  usecase.rs
cargo-project-domain/src/features/new/: mod.rs  repository.rs  usecase.rs
cargo-project/src/: main.rs
cargo-project/src/features/: add.rs  new.rs
project-cli/: Cargo.toml
project-cli/src/: main.rs
project-cli/src/features/: add.rs  new.rs
project-data/: Cargo.toml
project-data/src/features/add/: datasource.rs  mod.rs
project-data/src/features/new/: datasource.rs
project-domain/: Cargo.toml
project-domain/src/: lib.rs
project-domain/src/core/: mod.rs  utils.rs
project-domain/src/core/templates/: cli.rs  datasource.rs  entities.rs  mod.rs  mod_file.rs  models.rs  repository.rs  usecase.rs
project-domain/src/features/add/: entities.rs  mod.rs  repository.rs  usecase.rs
project-domain/src/features/new/: repository.rs  usecase.rs
