[package]
name = "cargo-project-data"
version = "0.1.0"
authors = ["Evan Helbig <evan.helbig@willowtreeapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.48"
futures = "0.3.13"