[package]
name = "cargo-project"
version = "0.1.0"
authors = ["Evan Helbig <evan.helbig@willowtreeapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
cargo-project-domain = { path = "../cargo-project-domain" }
futures = "0.3.13"
