[package]
name = "project-cli"
version = "0.1.0"
authors = ["Evan Helbig <evan.helbig@willowtreeapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
project-domain = { path = "../project-domain" }
futures = "0.3.13"