[package]
name = "project-domain"
version = "0.1.0"
authors = ["Evan Helbig <evan.helbig@willowtreeapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
async-trait = "0.1.48"
futures = "0.3.13"
project-data = { path = "../project-data" }
serde = { version = "1.0", features = ["derive"] }
tinytemplate = "1.2.1"
titlecase = "1.1.0"
